2009-05-19
	* Use glabel to display current project rather than a button.
	* Improve EditFileFun to place cursor at the beginning by default.
	* new argument x and y of gselect.list, to specify the position of the dialog widget.
	
2009-05-18
	* use options(widgetCoordinate=c(400,2)) to adjust the position of ViewFileFun widget etc.
	
2009-05-17
	* Minor improvement of GUI according to Kevin Brubeck Unhammer (see the mail list for details).
	
2009-05-12
	* improve UpdateFileofCaseWidget() to sort the items by time or	name.
	
2009-05-11
	* Could do coding within the C-cat Tab.
	* Improvement of popup menu of Case Tab.
	
2009-05-08
	* add Fid argument to SearchFiles().
	* fix bugs in addSettings() related to change of mark() etc.
	
2009-05-07
	* improve MemoWiget() to warning when close without saving.
	* fix bug of EditFileFun.
	* can handle subset of attributes only by selected subset of them.
	
2009-05-06
	* add arguments to UpdateTableWidget() to sort the items according to name or time -> by default, f-cat and c-cat are sorted by name.
	* Can edit a selected file (popup menu of Files/Case/F-cat Tab).
	* ShowSubset is generic now.
	
2009-05-05
	* add new argument to retrieval().
	* improvement of UpdateWidge to scroll the approriate position.
	* Use UpdateWidge after del/rename files and codes.
	* Improvement of add case button: Scroll to the new added case.
	* Show file property by click .fnames_rqda .FileofCat and .FileofCase.
	* add double click handler of journal widget.
	
2009-05-04
	* Project memo and journal editor will issue a dialogue if the 	memo is changed but not saved.
	* Class button to set class of attributes.
	* GetAttr convert the numeric variable into class of numeric.
	
2009-05-03
	* MemoWidget() will issue a dialogue if the memo is changed but not saved.
	* Improvement of SearchFiles().
	* GetFileName() and UpdateWidget(). UpdateWidget() updates the widget without accessing the database.
	
2009-05-01